<resources>
	<string name="app_name">CIMobile</string>
	<string name="iniciar_sesion">Iniciar sesión</string>
	<string name="iniciando_sesion">Iniciando sesión</string>
	<string name="titulo_logout">CERRAR SESION (Sin Cerrar Reparto)</string>
	<string name="titulo_regenerarBDA">REGENERAR BASE DE DATOS</string>
	<string name="nueva_notificacion">NUEVA notificación</string>
	<string name="resetear_app">RESETEAR APP</string>
	<string name="borrar_reparto">BORRAR Reparto</string>
	<string name="cargar_reparto">CARGAR (Reparto o Lista)</string>
	<string name="resumen_reparto">RESUMEN/CIERRE (Reparto o Lista)</string>
	<string name="cargando_notificacion">Cargando notificación</string>
	<string name="sin_resultados">Sin resultados</string>
	<string name="cargando_resultados">Cargando resultados</string>
	<string name="detalle_logout">Va a salir y cerrar la sesión, ¿Desea continuar?</string>
	<string name="detalle_regenerar_bda">ATENCION!!! SE PERDERAN TODOS LOS DATOS!!</string>
	<string name="ok">OK</string>
	<string name="cancelar">Cancelar</string>
	<string name="volver">Volver</string>
	<string name="notificador">Notificador</string>
	<string name="delegacion">Delegación</string>
	<string name="fecha">Fecha</string>
	<string name="total_ficheros">Sicer cargado</string>
	<string name="total_remesas">Total remesas</string>
	<string name="total_notificaciones">Cargadas</string>
	<string name="total_nombre_fichero_sicer">Sicer</string>
	<string name="total_nombre_fichero_segundo">Fichero Segundos</string>
	<string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
	<string name="total_notificaciones_acabadas">Ficheros generados en las visitas de hoy</string>
	<string name="total_resultados_reparto">Resultados almacenados (REPARTO)</string>
	<string name="total_resultados_lista">Resultados almacenados (OFICINA)</string>
	<string name="total_xml">XML (Fichero retorno de resultados)</string>
	<string name="total_st">ST (Fichero sello de tiempo fehaciencia)</string>
	<string name="total_fotos">Fotos acuses</string>
	<string name="total_notificaciones_pendientes_2_hoy">2ª vistas para hoy </string>
	<string name="total_notificaciones_pendientes_2_otro_dia">2ª visita para otro dia </string>
	<string name="total_notificaciones_marcadas">Marcadas</string>
	<string name="total_lista">Notificaciones almacenadas en LISTA</string>
	<string name="total_lista_cert">Certificados almacenados en LISTA</string>
	<string name="detalle_notificaciones">Resumen gestionadas</string>
	<string name="detalle_notificacion">Detalle notificación</string>
	<string name="detalle_primer_intento">Detalle primer intento</string>
	<string name="detalle_lista">Detalle lista</string>
	<string name="no_entregado">No entregado</string>
	<string name="entregado">Entregado</string>
	<string name="entregadoConSinFirma">01 Entregado</string>
	<string name="todos">Resultados Sin Firma o En Papel</string>
	<string name="entregado_con_firma_01">Notificado con Firma (01-Domicilio/09-Lista)</string>
	<string name="entregado_01">01 Entregado sin Firma</string>
	<string name="dir_incorrecta_02">02 Dir. incorrecta</string>
	<string name="ausente_31">31 Ausente (1ª Visita) </string>
	<string name="ausente_32">32 Ausente (2 ª Visita)</string>
	<string name="desconocido_04">04 Desconocido</string>
	<string name="fallecido_05">05 Fallecido</string>
	<string name="rehusado_06">06 Rehusado</string>
	<string name="nadie_se_hace_cargo_07">07 Nadie se hace cargo (1ª Visita)</string>
	<string name="nadie_se_hace_cargo_33">33 Nadie se hace cargo (2ª Visita)</string>
	<string name="entregado_en_oficina_08">08 Entregado en oficina</string>
	<string name="no_entregado_en_oficina_09">09 No Entregado en oficina</string>
	<string name="cerrar_reparto">CERRAR REPARTO</string>
	<string name="hacer_foto">Hacer Foto</string>
	<string name="espere_info_reparto">Espere mientras se obtiene información del reparto</string>
	<string name="espere_info_notificacion">Espere mientras se obtiene información de la notificación</string>
	<string name="notificacion_sin_resultaos">Esta notificacion no tiene resultados posibles</string>
	<string name="espere_info_resultados">Espere mientras se cargan los posibles resultados de notificación</string>
	<string name="espere_info_inicio_sesion">Espere mientras se obtiene la información del inicio de sesión</string>
	<string name="filtro">Filtro</string>
	<string name="filtro_busqueda">Filtro de búsqueda</string>
	<string name="resultado">Resultado</string>
	<string name="resultado1">RESULTADO 1</string>
	<string name="resultado2">RESULTADO 2</string>
	<string name="flag_foto">Flag Foto</string>
	<string name="motivo_no_entrega">Motivo de no entrega</string>
	<string name="resultados_sin_firma">Resultados SIN firma o en papel</string>
	<string name="sin_resultados_posibles">Notificacion sin resultados posibles</string>
	<string name="numero_documento">Número documento</string>
	<string name="nombre_y_apellidos">Nombre y apellidos</string>
	<string name="relacion_destinatario">Relacion Destinatario</string>
	<string name="el_interesado">El Interesado</string>
	<string name="firma_receptor">Firma del receptor</string>
	<string name="foto_acuse_detalle">Foto del acuse</string>
	<string name="guardar">Guardar</string>
	<string name="cargar_fichero_sicer">Cargar fichero SICER</string>
	<string name="esta_seguro_de_cargar_el_fichero_sicer">¿Está seguro de cargar el fichero SICER</string>
	<string name="no_cargar_el_fichero_sicer">AVISO!! Antes de cargar un nuevo reparto debe BORRAR el actual cargado en el dispositivo</string>
	<string name="conexion_ftp">Conexión FTP</string>
	<string name="espere_conexion_servidor_ftp">Espere mientras se conecta al servidor FTP</string>
	<string name="fallo_conexion_servidor_ftp">ERROR!! al conectar al servidor FTP</string>
	<string name="guardando_datos_en_bd_interna">Guardando los datos en la base de datos interna</string>
	<string name="cargando_fichero_sicer">"Cargando fichero SICER…\nLinea: "</string>
	<string name="sicer_fichero_cargado_anteriormente">AVISO!! FICHERO SICER YA FUE CARGADO</string>
	<string name="segundos_reparto_fichero_cargado_anteriormente">AVISO!! FICHERO SEGUNDOS INTENTOS REPARTO YA FUE CARGADO</string>
	<string name="segundos_lista_fichero_cargado_anteriormente">AVISO!! FICHERO SEGUNDOS INTENTOS LISTA YA FUE CARGADO</string>
	<string name="segundos_lista_cargado_avisos">AVISO!! Estas en modo OFICINA debes cargar el fichero segundos_intentos_lista</string>
	<string name="segundos_reparto_cargado_aviso">AVISO!! Estas en modo REPARTO debes cargar el fichero segundos_intentos_repartidores</string>
	<string name="datos_guardados_ok_bd">Se ha guardado correctamente en la base de datos</string>
	<string name="informacion_carga">Información carga</string>
	<string name="latitud">Latitud</string>
	<string name="longitud">Longitud</string>
	<string name="xml">XML</string>
	<string name="st">ST</string>
	<string name="observaciones">Observaciones</string>
	<string name="hint_observaciones">Mis observaciones…</string>
	<string name="referencia_postal">Referencia Postal</string>
	<string name="referencia_scb">Referencia SCB</string>
	<string name="direccion">Dirección</string>
	<string name="receptor">Receptor</string>
	<string name="receptor_numero_documento">Numero Documento Receptor</string>
	<string name="informacion_segundo_intento_tarde">El segundo intento de notificación debe ser entre las 15:00 y las 20:00</string>
	<string name="informacion_segundo_intento_mañana">El segundo intento de notificación debe ser entre las 8:00 y las 15:00</string>
	<string name="informacion_intento_fuera_horario">Intento fuera de horario</string>
	<string name="informacion_lista">No admite un NO ENTREGADO EN OFICINA por estar en plazo</string>
	<string name="generado_xml">Generando el fichero XML</string>
	<string name="generado_sello_de_tiempo">Generando el sello de tiempo del fichero XML</string>
	<string name="error_generar_XML">No se ha generado el fichero XML de resultados. REVISE LOS PERMISOS DEL MOVIL</string>
	<string name="error_lectura_fichero_xml">Se ha producido un fallo al leer el fichero XML para realizar el sellado de tiempo</string>
	<string name="error_carga_resultados">No hay resultados para esta notificacion</string>
	<string name="error_guardar_en_bd">Se ha producido un error al guardar en la base de datos</string>
	<string name="error_guardar_en_bd_localizacion">Debes INICIAR GPS (Sin cobertura se pondra (-0.0000000,00.0000000))"</string>
	<string name="guardado">GUARDADO!!!</string>
	<string name="no_guardado">NO GUARDADO!!!</string>
	<string name="problema_guardar_realizar_notif_en_papel">PROBLEMA al guardar la notificacion en el dispositivo. REALICE LA NOTIFICACION EN PAPEL</string>
	<string name="problema_guardar_XML_realizar_notif_en_papel">PROBLEMA al generar el fichero XML. REVISE QUE TIENE ESPACIO EN EL DISCO DE LA PDA o REALICE LA NOTIFICACION EN PAPEL</string>
	<string name="problema_DNI">Es obligatorio poner NUMERO DE DOCUMENTO para poder guardar el resultado</string>
	<string name="problema_FIRMA">Es obligatorio poner FIRMA para poder guardar el resultado</string>
	<string name="problema_guardar_ST_realizar_notif_en_papel">PROBLEMA al generar el fichero ST. Revise las PREFERENCIAS o REALICE LA NOTIFICACION EN PAPEL</string>
	<string name="notificacion_grabada_correctamente">La notificación se ha guardado correctamente</string>
	<string name="cerrar_reparto_info">Va a CERRAR el reparto, se generará el fichero con los RESULTADOS su subida al FTP y el BORRADO de los datos del dispositivo si no estas gestionando por PEE. ¿Desea Continuar?</string>
	<string name="borrar_reparto_info">Va a BORRAR el reparto, se eliminaran todos de los datos del dispositivo. ¿Desea Continuar?</string>
	<string name="cerrar_hacer_foto">Va a hacer la foto del acuse. ¿Desea Continuar?</string>
	<string name="error_conexion_ftp">ERROR!! Se ha producido un error en la conexión FTP</string>
	<string name="error_acceso_carpeta_ftp">ERROR!! No se ha podido acceder a la carpeta SICER del FTP</string>
	<string name="error_subir_fichero_zip">Se ha producido un error al subir el fichero ZIP</string>
	<string name="error_subir_fichero_CSV">Se ha producido un error al subir el fichero CSV</string>
	<string name="error_borrado_notificaciones">Se ha producido un error al borrar las notificaciones</string>
	<string name="error_borrado_notificaciones_PEE">Gestión por PEE, debera hacer el borrado del reparto manual</string>
	<string name="error_carga_fichero">ERROR!! CARGANDO EL FICHERO segundos_intentos VUELVE A INTENTARLO</string>
	<string name="error_fallo_borrar_ficheros_sensibles">Se ha producido un error al borrar los ficheros XML, CSV, imagenes y sellos de tiempo</string>
	<string name="generando_fichero_CSV">Generando fichero CSV</string>
	<string name="subiendo_fichero_CSV">Subiendo fichero CSV al servidor FTP</string>
	<string name="subiendo_fichero_segundo_intento">Subiendo fichero segundo intento al servidor FTP</string>
	<string name="generando_fichero_zip">Generando fichero ZIP con todos los datos</string>
	<string name="subiendo_fichero_zip">Subiendo fichero ZIP al servidor FTP</string>
	<string name="limpiando_base_datos">Limpiando base de datos</string>
	<string name="limpiando_directorio">Limpiando ficheros XML, CSV, TS</string>
	<string name="cierre_reparto_correcto">El cierre del reparto se ha realizado correctamente</string>
	<string name="borrado_reparto_correcto">El borrado del reparto se ha realizado correctamente</string>
	<string name="error_subiendo_fichero_segundo_intento">Se ha producido un error al subir el fichero de segundos intentos</string>
	<string name="error_proceso_cierre_reparto">Se ha producido un error durante el proceso de cierre de reparto</string>
	<string name="foto_acuse">Hacer Foto</string>
</resources>