<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

            <TextView
                android:id="@+id/tv_result_entregado_cabecera_resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/resultado"
                android:textAllCaps="true"
                android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/fieldset_shape">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_result_entregado_resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_result_entregado_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificador"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_result_entregado_notificador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificador"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:layout_marginTop="5dp">

                <TableRow>

                    <TextView
                        android:text="@string/latitud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                    <TextView
                        android:text="@string/longitud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_result_entregado_latitud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitud"/>

                    <TextView
                        android:id="@+id/tv_result_entregado_longitud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitud"/>

                </TableRow>

            </TableLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:layout_marginTop="5dp">

                <TableRow>

                    <TextView
                        android:text="@string/xml"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                    <TextView
                        android:text="@string/st"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_result_xml"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xml"/>

                    <TextView
                        android:id="@+id/tv_result_st"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/st" />

                </TableRow>

            </TableLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receptor"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_result_entregado_receptor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receptor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receptor_numero_documento"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_result_entregado_receptor_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receptor_numero_documento"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/relacion_destinatario"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_result_entregado_relacion_destinatario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relacion_destinatario" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firma_receptor"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:id="@+id/imageView_result_entregado_firma"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:contentDescription="@string/firma_receptor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/foto_acuse_detalle"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView_result_entregado_foto_acuse"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:contentDescription="@string/foto_acuse" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/observaciones"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tv_result_entregado_observaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/edit_text_shape"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:labelFor="@+id/tv_result_entregado_observaciones"
                android:lines="4"
                android:overScrollMode="always"
                android:padding="3dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>