<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nueva_notificacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".Activities.NuevaNotificacionActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:text="@string/detalle_notificacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@drawable/fieldset_shape">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/referencia_postal"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_nuevaNotificacion_refPostal"
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_y_apellidos"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:id="@+id/textView_nuevaNotificacion_nombre"
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/direccion"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:id="@+id/textView_nuevaNotificacion_direccion"
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="*"
                        android:layout_marginTop="5dp">

                        <TableRow>

                            <TextView
                                android:text="@string/latitud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"/>

                            <TextView
                                android:text="@string/longitud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"/>

                        </TableRow>

                        <TableRow>

                            <TextView
                                android:id="@+id/textView_nuevaNotificacion_latitud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:id="@+id/textView_nuevaNotificacion_longitud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </TableRow>

                    </TableLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:weightSum="1">

                <TextView
                    android:text="@string/observaciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/editText_nuevaNotificacion_observaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:lines="4"
                    android:padding="3dp"
                    android:background="@drawable/edit_text_shape"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:scrollHorizontally="false"
                    android:hint="@string/hint_observaciones"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_detalle_primer_intento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:text="@string/detalle_primer_intento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@drawable/fieldset_shape">

                    <TextView
                        android:text="@string/resultado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_nuevaNotificacion_resultadoDetalle_primerIntento"
                        android:text="@string/resultado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"/>

                    <TextView
                        android:text="@string/fecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_nuevaNotificacion_resultadoDetalle_primerIntento_fecha"
                        android:text="@string/fecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/textView_nuevaNotificacion_consejo_segundo_intento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/linearLayout_nueva_notificacion_botonera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/button_nueva_notificacion_noEntregado"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_no_entregado"
                    android:text="@string/no_entregado"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/button_nueva_notificacion_entregado"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_entregado"
                    android:text="@string/entregado"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />


            </LinearLayout>

        </LinearLayout>



    </ScrollView>

</LinearLayout>
